# culqi-python

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .pylintrc.local  .travis.yml  CHANGELOG  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST  README.md  SETUP_INSTRUCTIONS.md  culqi.py  example.py  exceptiongroup-1.2.0-py3-none-any.whl  index.py  object.py  pluggy-1.4.0-py3-none-any.whl  pyproject.toml  pytest-7.4.4-py3-none-any.whl  requirements.dev.txt  requirements.tox.txt  requirements.travis.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
app/: app.py
controller/: app.py  data.py
culqi/: client.py  version.py
culqi/resources/: __init__.py  base.py  card.py  charge.py  customer.py  event.py  iin.py  order.py  plan.py  refund.py  subscription.py  token.py  transfer.py
culqi/schemas/: card.py  charge.py  customer.py  order.py  plan.py  refund.py  subscription.py
culqi/utils/: constants.py  culqi_validation.py  encoder.py  errors.py  status_codes.py  urls.py
culqi_py/: example.py  test.py
culqipy/: __init__.py  charge.py  client.py  culqi.py  plan.py  refund.py  resource.py  subscription.py  test.py  token.py  util.py  utils.py  version.py
culqipy/resources/: __init__.py  base.py  card.py  charge.py  customer.py  event.py  iin.py  order.py  plan.py  refund.py  subscription.py  suscription.py  token.py  transfer.py
culqipy/utils/: __init__.py  errors.py  urls.py
example/: workflow.py
legacy/culqipy/: __init__.py  resource.py  utils.py
legacy/tests/: test.py
static/js/: main-charge.js  main.js
templates/: index-card.html  index.html
templates/js/: main.js
test/: listtest.py  test.py
tests/: __init__.py  __main__.py  conftest.py  data.py  test_card.py  test_charge.py  test_client.py  test_customer.py  test_event.py  test_iin.py  test_order.py  test_plan.py  test_refund.py  test_subscription.py  test_suscription.py  test_token.py  test_transfer.py  test_version.py  utils.py
tests/cassettes/: CardTest.test_card_create.yaml  CardTest.test_card_create__contact_issuer__master_card.yaml  CardTest.test_card_create__incorrect_cvv__master_card.yaml  CardTest.test_card_create__insufficient_funds__visa.yaml  CardTest.test_card_create__invalid_card__diners_club.yaml  CardTest.test_card_create__issuer_decline_operation__american_express.yaml  CardTest.test_card_create__issuer_not_available__american_express.yaml  CardTest.test_card_create__lost_card__visa.yaml  CardTest.test_card_create__processing_error__diners_club.yaml  CardTest.test_card_delete.yaml  (+75 more)
(+21 files in other folders)
