[tool.poetry]
name = "culqi"
version = "1.0.0"
description = 'Biblioteca de Culqi en Python'
authors = ["zodiacfireworks <martin.vuelta@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22"

[tool.poetry.dev-dependencies]
jupyterlab = "^1.2"
twine = "^3.1"
pylint = "^2.4"
autopep8 = "^1.4"
coverage = "^5.0"
pytest-cov = "^2.8"
python-dotenv = "^0.10.3"
mypy = "^0.761.0"
tox = "^3.14"
codecov = "^2.0"
flake8 = "^3.7"
pytest = "^5.3"
pytest-vcr = "^1.0"
black = "19.10b0"
pydocstyle = "^5.0"
pre-commit = "^1.20.0"
flake8-black = "^0.1.1"

[tool.black]
target_version = ['py35', 'py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |_build
  |buck-out
  |build
  |dist
  |legacy
)/
'''
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
